--- a/Frontend_Angular/src/app/components/login/login.component.html
+++ b/Frontend_Angular/src/app/components/login/login.component.html
@@ -3,14 +3,16 @@
 <div class="container">
   <form action="/login" method="post">
     <h1>Login Page</h1>
-    <label for="fullname">Full Name</label>
-    <input type="text" id="fullname" name="fullname" required>
+    <label for="email">Email Id</label>
+    <input type="email" id="email" formControlName="email" required>
 
     <label for="password">Password</label>
     <input type="password" id="password" name="password" required>
 
     <input type="submit" value="Submit">
     Not registered? <a href="/register">Register</a>
+    <br>
+    Forgot password? <a href="/forgotpassword">Forgot Password</a>
   </form>
 </div>
 </body>
