--- a/Frontend_Angular/src/app/components/home/home.component.html
+++ b/Frontend_Angular/src/app/components/home/home.component.html
@@ -6,5 +6,7 @@
             <a class="btn btn-lg btn-success mr-2" routerLink="/login" role="button">Login</a>
             <a class="btn btn-lg btn-success" routerLink="/register" role="button">Register</a>
         </div>
+        <hr class="my-4">
+        <p class="lead">By Shiva Charan Reddy Kallem</p>
     </div>
 </div>
