Add styles and bootstrap components

--- a/Frontend_Angular/src/app/components/home/home.component.html
+++ b/Frontend_Angular/src/app/components/home/home.component.html
@@ -1,12 +1,14 @@
-<div class="container-fluid">
-    <div class="jumbotron text-center">
-        <h1 class="display-4 mt-3">Welcome To Online Recruitment System</h1>
-        <p class="lead">Your journey to a better job starts here.</p>
-        <div class="button-group">
-            <a class="btn btn-lg btn-success mr-2" routerLink="/login" role="button">Login</a>
-            <a class="btn btn-lg btn-success" routerLink="/register" role="button">Register</a>
-        </div>
-        <hr class="my-4">
-        <p class="lead">By Shiva Charan Reddy Kallem</p>
+<section class="vh-100" style="background-image: url('https://lh3.googleusercontent.com/fife/ALs6j_FO8KiwD1-f2OG3n_1pPkZqgrIT1Gff13awgn8mSaRXo6Mgni4J4_m1GRfrwjc3UGWnLUYgiJu55h1_H4AjEsqpkNxecXjW1V7LAWQau9eQkzJTYmVTjbcNl-TA4tW3ulUuClsGDhvipsTOCpWXITkmL2V_7KPsJvcipPq4tP_8T0hJAo19WQN1ANY1bk9yYF82rG1wNgaFGe1y63qQ4qkVPnfy0JcuVHqhZo-NacvEEgUZ2yGXkBJ3_ObsU8AGJ7gOLNOfS2g3g2Oa5VAjVJDULx61SgRmkgXaF9epxujRs2Hv5BVsqv7opudGwhcSQF9IMlsnODS1_b7MPtFhm91YHt-a0bR3fYQ-w7XLuS9SaUu_lGrPiRjd5EmMr-mn2DrxdJRoFRG7Vpk9HCr5PETHN-fZP6YOIznwMZzvYkRBpN72Q4vq67yHxWS2rlH94unz44nnAwkhePp8XVOdEtSsQBCfd35L6oue49q55ebehGY3K21_2Aat9vMMCBv4yoyagsA2y9j6YaOJbbfZ2cyo7VOmVtcVMuNfSrYmpNJ33sis08vC1wLrJ-xpOb2G3yMOWhytty_C_9vi5Ko95zrAueMc_pkG-IyiIWPPLkAkbpQMQzQBeIRQ8KChdQpElJ7Id_hnw734_Ct5XS1CnmA4e20VVOwnog6x28gYu9qdpeAz7diGal1a60FeVULGCumQNI6P-a4RiyK5DqApz67BiAJ4_2joBFfwpmEKqyRHQ7KAXM4_x6tdn77nB5fGfyfewARCBFrb4liXVVA6jthrSv9mWbfwHtiSGvxVVD9yO0C50VaKtcaB4kGDFESv4w5C49848zOL1TABMppvCAvRbzFIAJ5vSWRjdSvB49PvZWY652BagkmVI-ljTpT2RkNi0eJn3PmEygScgZPMdKns-wW2sFl3znkXIc_utnDCpR8kuZLnGY8654gFqrZN5rO5ZDlB95ku0IL_eUpCfvRsHIhwaw9MqMK3hWfI8cVJhTdUKZeBTSwo045Cuoakyu0as39jSuLHpJu_ldalsM8iiT4CuE_FONcVzXUIbK8xZO-NjTgqynfuH1wW8RaWEzRYx8buUOcj-R50sXBUNH0p1YppF0gAwuLLA2jSAca18bL2AoWNpjPwEglpZk9GmMgjLiVuu1WNFI_NFqGaLxIqWfN73ho56ITh_CrWGKp1xG2KtEqznaj9zjfKe5Cr6H1XIQAB4675GLJGCzWV7yCDlDoCQnsEwjj-GyEyqfR66uN6oIrPZ4pbri7UpCp5OXjsRKSdbllD-6cokbzTjZl12yWWfk7oTZA3zfp_lFmfga51UBpf3SvM6ewnl569xMdEpKTVLlKczgnVIRokJEVIEWcNaoM3gvOeKMPAg48Dt85ogb1o7gxGhWM0Ukp9aCM5eU-_Oj_71fxPA5J7em7rL0I2gnRrz25J4OR5CFoQ9PjDaN4PJnlhB_FhWRv7an4cwXCecCBxFgFFSlHYVpOFw7i4alxH1Euo=s512'); background-size: 100% 100%;   background-repeat: no-repeat;">
+  <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="card d-flex flex-column justify-content-center align-items-center" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px);">
+      <h1 class="display-4 mb-4">Welcome To Online Recruitment System</h1>
+      <p class="lead">Your journey to a better job starts here.</p>
+      <div class="button-group mt-4">
+        <a class="btn btn-lg btn-dark mr-2" routerLink="/login" role="button">Login</a>
+        <a class="btn btn-lg btn-dark" routerLink="/register" role="button">Register</a>
+      </div>
+      <hr class="my-4">
+      <p class="lead">Created by Shiva Charan Reddy Kallem</p>
     </div>
-</div>
+  </div>
+</section>
