--- a/Frontend_Angular/src/app/components/login/login.component.css
+++ b/Frontend_Angular/src/app/components/login/login.component.css
@@ -1,3 +1,7 @@
-.login-container {
-    margin-top: 50px;
+.divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
 }
