--- a/Frontend_Angular/src/app/components/registration/registration.component.html
+++ b/Frontend_Angular/src/app/components/registration/registration.component.html
@@ -1,31 +1,31 @@
-<body class="bg-light">
-  <body class="bg-light">
-    <div class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h1 class="text-center mb-4">Student Registration Page</h1>
-              <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
-              <div class="mb-3">
+<section style="background-image: url('https://lh3.googleusercontent.com/fife/ALs6j_Fw8tz62ckSQKkdGI3UIdWAwhmpqMm0-JKDMXDsf6c-i-_T9gTWr4kH7lvPB1WGQgDdnBYuFt5rWbaiW4ly4PbnpsSpyDta6-5pwrVVd2kUl8rp9Vj_DUJu97kHmv5bOPE2XXiQ9tgOxYYcl0BoC1_B60vocXZ_I51003dV76pLEjS-eMWQWJAs-ggMNzzRG0RH0GUL9RL-MBSHfWCAbloqhwhjcIwVbX2UyE3OtuQ560tDhSlDuCfSc32nqPLuoF9UHF4INtro6L1OswhyQesrRvYqp2Im9C-sqm5g8cHcia51fbqLpDqqUujr5OOl0NQVDg0DlGoIfgz_KTL--MA0RKTf4N7jC9RAET7zI7pMg6DoSw5XYVZGl2FcQ2UdHZaQxUkKjOCRRW4UNm19-CZo6cPIk3f93enRTR15DgzXtm616NfyDThxzfTxGWbp3Xq_4drYCRHpTh4tgv02tZfFM93PRG-C9Jex6sXWXY49ZQT53jDSj5V8LYzgVGABpKbZWybnzu3c8NtQxxxnXc_T1mbXhmxhL7YjxXD2LUvIob_HD42SeDpwly40g27lyqsCa7Qedg34WiPfvpKj4D9pxuhqQ3gJVi5Y5FSHHl1-xE3oycdHlxX5Qi5_aW73V31n7J7rG8FjuTYFSIW-rUAi1B9plkDZf9JwrVvHkdUbCwsuTmiHaf2VytkPAGWH3NqQtO-RAra1GuJs2rJesCatZgJAoYmJTizSntw0Cn32mU_kfFPueVCva6KnX0qMFsBMMW_BDFtyZrFwJ0aQ8Ki_uvfzt0DvawgJqSWKxhIiGZAombPnJ_HPAnafA1EjUEUqy3SdgvqEZ5EIg5TGtlVTYaPb-q2u_zAsEOEzLOjxVdkL22yFc7ZvtClDCCr4ZTUCRGcespGVNths2HoDNaK9bjTuEtFA0XeAcsXPVfegX3DHmb5pkhvBMtV0E02qQiwFsXKSHlaRlo1dQUY2RChgNP2CJoafKiWV5MRPa2PIzQK59jrCyQEA24t7nLb5iCu_-M3eLwja6TAm_FQCfc7A1MA7NV4eWxVLjuopnKMHqyKvf2abaDZSN-kVjyc94-62a1nhytqfJ_dO0O9LDim39iNDc97IItmkqBRtxo4SQ2zb7a0d70Pldinwb_nyfyh6Pmsc5Irh6ln4MumHb29mF_2UwrU_s306hzAj940Szf5Qf93CVBXZBtOi99jhxbUjtogzFQ3lgrBchw-uUZrRMC1KawCMK0Psdhz3vQa8AxDZNN8yAC-srl2skoUXi4HKVe87xrGpaB9jdpHsMSPrcOFevrzQNH7ks5gGY8ruCEDaNcC7Y-P2tT-YbgODYRsjSF50fEL3vO-0kJNSkO6daIh2RniStmfwgUb9g2cXr072BKyVh-9dIdoOtos0Kg21GMZx2LGzqMFg099Zp8aNkfO16nwULaUNsY1-Opdut9K8DeOdZb3X9CXvMW5_0ve7i_04yWldHE1Qzr4JrgR--0SdVgni8yOd=s512');
+ background-size: 1920px 1200px; background-repeat: no-repeat;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
+          <div class="card-body p-4 p-lg-5 text-black">
+            <h1 class="text-center mb-4">Student Registration Page</h1>
+            <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
+              <div class="form-outline mb-2"> 
                 <label for="fullname" class="form-label">Full Name</label>
-                <input type="text" id="fullname" formControlName="fullname" class="form-control" placeholder="Enter your full name" aria-describedby="fullnameHelp">
+                <input type="text" id="fullname" formControlName="fullname" class="form-control form-control-lg" placeholder="Enter your full name">
                 <div *ngIf="registrationForm.get('fullname')?.touched && registrationForm.get('fullname')?.errors?.['required']" class="text-danger">
                   Full name is required.
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="address" class="form-label">Address</label>
-                <input type="text" id="address" formControlName="address" class="form-control" placeholder="Enter your address" required>
+                <input type="text" id="address" formControlName="address" class="form-control form-control-lg" placeholder="Enter your address" required>
                 <div *ngIf="registrationForm.get('address')?.invalid && (registrationForm.get('address')?.dirty || registrationForm.get('address')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('address')?.errors?.['required']">
                     Address is required.
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="email" class="form-label">Email Id</label>
-                <input type="email" id="email" formControlName="email" class="form-control" placeholder="Enter your email" required>
+                <input type="email" id="email" formControlName="email" class="form-control form-control-lg" placeholder="Enter your email" required>
                 <div *ngIf="registrationForm.get('email')?.invalid && (registrationForm.get('email')?.dirty || registrationForm.get('email')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('email')?.errors?.['required']">
                     Email is required.
@@ -35,9 +35,9 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="emailVerification" class="form-label">Email Verification</label>
-                <input type="email" id="emailVerification" formControlName="emailVerification" class="form-control" placeholder="Enter your email again" required>
+                <input type="email" id="emailVerification" formControlName="emailVerification" class="form-control form-control-lg" placeholder="Enter your email again" required>
                 <div *ngIf="registrationForm.get('emailVerification')?.invalid && (registrationForm.get('emailVerification')?.dirty || registrationForm.get('emailVerification')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('emailVerification')?.errors?.['required']">
                     Email verification is required.
@@ -50,9 +50,9 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="phone" class="form-label">Phone no</label>
-                <input type="tel" id="phone" formControlName="phone" class="form-control" placeholder="Enter your phone number" pattern="[0-9]{10}" required>
+                <input type="tel" id="phone" formControlName="phone" class="form-control form-control-lg" placeholder="Enter your phone number" pattern="[0-9]{10}" required>
                 <div *ngIf="registrationForm.get('phone')?.invalid && (registrationForm.get('phone')?.dirty || registrationForm.get('phone')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('phone')?.errors?.['required']">
                     Phone number is required.
@@ -62,9 +62,9 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="password" class="form-label">Password</label>
-                <input type="password" id="password" formControlName="password" class="form-control" placeholder="Enter your password" minlength="8" required>
+                <input type="password" id="password" formControlName="password" class="form-control form-control-lg" placeholder="Enter your password" minlength="8" required>
                 <div *ngIf="registrationForm.get('password')?.invalid && (registrationForm.get('password')?.dirty || registrationForm.get('password')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('password')?.errors?.['required']">
                     Password is required.
@@ -74,18 +74,18 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="birthdate" class="form-label">Date of Birth</label>
-                <input type="date" id="birthdate" formControlName="birthdate" class="form-control" required>
+                <input type="date" id="birthdate" formControlName="birthdate" class="form-control form-control-lg" required>
                 <div *ngIf="registrationForm.get('birthdate')?.invalid && (registrationForm.get('birthdate')?.dirty || registrationForm.get('birthdate')?.touched)" class="text-danger">
                   <div *ngIf="registrationForm.get('birthdate')?.errors?.['required']">
                     Date of birth is required.
                   </div>
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="form-outline mb-2"> 
                 <label for="nationality" class="form-label">Nationality</label>
-                <select id="nationality" formControlName="nationality" class="form-select" aria-placeholder="Select Nationality" required>
+                <select id="nationality" formControlName="nationality" class="form-select form-select-lg" aria-placeholder="Select Nationality" required>
                   <option value="">Select Nationality</option>
                   <option *ngFor="let nationality of nationalities" [value]="nationality">{{nationality}}</option>
                 </select>
@@ -95,9 +95,25 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn btn-primary w-100 mt-3">Register</button>
+              <div class="form-outline mb-2"> 
+                <label for="gender" class="form-label">Gender</label><br>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gender" id="male" formControlName="gender" value="male">
+                  <label class="form-check-label" for="male">Male</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gender" id="female" formControlName="gender" value="female">
+                  <label class="form-check-label" for="female">Female</label>
+                </div>
+                <div *ngIf="registrationForm.get('gender')?.invalid && (registrationForm.get('gender')?.dirty || registrationForm.get('gender')?.touched)" class="text-danger">
+                  <div *ngIf="registrationForm.get('gender')?.errors?.['required']">
+                    Gender is required.
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-dark btn-lg btn-block">Register</button>
               <p class="text-center mt-3">
-                Already a Member? <a routerLink="/login">Login</a>
+                Already a Member? <a routerLink="/login" style="color: #393f81;">Login</a>
               </p>
             </form>
           </div>
@@ -105,4 +121,4 @@
       </div>
     </div>
   </div>
-</body>
+</section>
