added job component

--- a/Frontend_Angular/src/app/components/registration/registration.component.html
+++ b/Frontend_Angular/src/app/components/registration/registration.component.html
@@ -1,11 +1,11 @@
-<section style="background-image: url('https://lh3.googleusercontent.com/fife/ALs6j_Fw8tz62ckSQKkdGI3UIdWAwhmpqMm0-JKDMXDsf6c-i-_T9gTWr4kH7lvPB1WGQgDdnBYuFt5rWbaiW4ly4PbnpsSpyDta6-5pwrVVd2kUl8rp9Vj_DUJu97kHmv5bOPE2XXiQ9tgOxYYcl0BoC1_B60vocXZ_I51003dV76pLEjS-eMWQWJAs-ggMNzzRG0RH0GUL9RL-MBSHfWCAbloqhwhjcIwVbX2UyE3OtuQ560tDhSlDuCfSc32nqPLuoF9UHF4INtro6L1OswhyQesrRvYqp2Im9C-sqm5g8cHcia51fbqLpDqqUujr5OOl0NQVDg0DlGoIfgz_KTL--MA0RKTf4N7jC9RAET7zI7pMg6DoSw5XYVZGl2FcQ2UdHZaQxUkKjOCRRW4UNm19-CZo6cPIk3f93enRTR15DgzXtm616NfyDThxzfTxGWbp3Xq_4drYCRHpTh4tgv02tZfFM93PRG-C9Jex6sXWXY49ZQT53jDSj5V8LYzgVGABpKbZWybnzu3c8NtQxxxnXc_T1mbXhmxhL7YjxXD2LUvIob_HD42SeDpwly40g27lyqsCa7Qedg34WiPfvpKj4D9pxuhqQ3gJVi5Y5FSHHl1-xE3oycdHlxX5Qi5_aW73V31n7J7rG8FjuTYFSIW-rUAi1B9plkDZf9JwrVvHkdUbCwsuTmiHaf2VytkPAGWH3NqQtO-RAra1GuJs2rJesCatZgJAoYmJTizSntw0Cn32mU_kfFPueVCva6KnX0qMFsBMMW_BDFtyZrFwJ0aQ8Ki_uvfzt0DvawgJqSWKxhIiGZAombPnJ_HPAnafA1EjUEUqy3SdgvqEZ5EIg5TGtlVTYaPb-q2u_zAsEOEzLOjxVdkL22yFc7ZvtClDCCr4ZTUCRGcespGVNths2HoDNaK9bjTuEtFA0XeAcsXPVfegX3DHmb5pkhvBMtV0E02qQiwFsXKSHlaRlo1dQUY2RChgNP2CJoafKiWV5MRPa2PIzQK59jrCyQEA24t7nLb5iCu_-M3eLwja6TAm_FQCfc7A1MA7NV4eWxVLjuopnKMHqyKvf2abaDZSN-kVjyc94-62a1nhytqfJ_dO0O9LDim39iNDc97IItmkqBRtxo4SQ2zb7a0d70Pldinwb_nyfyh6Pmsc5Irh6ln4MumHb29mF_2UwrU_s306hzAj940Szf5Qf93CVBXZBtOi99jhxbUjtogzFQ3lgrBchw-uUZrRMC1KawCMK0Psdhz3vQa8AxDZNN8yAC-srl2skoUXi4HKVe87xrGpaB9jdpHsMSPrcOFevrzQNH7ks5gGY8ruCEDaNcC7Y-P2tT-YbgODYRsjSF50fEL3vO-0kJNSkO6daIh2RniStmfwgUb9g2cXr072BKyVh-9dIdoOtos0Kg21GMZx2LGzqMFg099Zp8aNkfO16nwULaUNsY1-Opdut9K8DeOdZb3X9CXvMW5_0ve7i_04yWldHE1Qzr4JrgR--0SdVgni8yOd=s512');
+<section style="background-image: url('https://images.pexels.com/photos/733856/pexels-photo-733856.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
  background-size: 1920px 1200px; background-repeat: no-repeat;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
           <div class="card-body p-4 p-lg-5 text-black">
-            <h1 class="text-center mb-4">Student Registration Page</h1>
+            <h1 class="h1 fw-bold mb-0">Student Registration Page</h1>
             <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
               <div class="form-outline mb-2"> 
                 <label for="fullname" class="form-label">Full Name</label>
