change background colour

--- a/Frontend_Angular/src/app/components/job-search/job-search.component.html
+++ b/Frontend_Angular/src/app/components/job-search/job-search.component.html
@@ -21,12 +21,12 @@
 
     <!-- Filter buttons -->
     <div class="d-flex flex-wrap mb-4">
-        <button type="button" class="btn btn-outline-secondary m-2" *ngFor="let filter of filters">{{ filter }}</button>
+        <button type="button" class="btn btn-outline-secondary m-2" style="color: rgb(255, 255, 255);" *ngFor="let filter of filters">{{ filter }}</button>
     </div>
 
     <!-- Companies section -->
     <div class="mb-5">
-        <h2 class="text-center">Top companies hiring now</h2>
+        <h2 class="my-4 text-center">Top companies hiring now</h2>
         <div class="d-flex justify-content-start overflow-auto">
             <div class="card me-3" style="width: 18rem;">
                 <div class="card-body">
