--- a/Frontend_Angular/src/app/components/login/login.component.html
+++ b/Frontend_Angular/src/app/components/login/login.component.html
@@ -40,7 +40,7 @@
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid" routerLink="/login-success">Login</button>
                   </div>
 
                   <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
