--- a/Frontend_Angular/src/app/app.component.css
+++ b/Frontend_Angular/src/app/app.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(to right, #ff9966, #ff5e62);
+    background: linear-gradient(to right, #6a1b9a, #00b4d9);
     color: white;
 }
 
