--- a/Frontend_Angular/src/app/app.component.html
+++ b/Frontend_Angular/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div style="position: static;">
     <nav class="navbar navbar-expand-sm navbar-light bg-light bg-light-red">
         <div class="container-fluid">
@@ -8,13 +7,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="currentRoute !== '/home'">
                         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="currentRoute !== '/login'">
                         <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="currentRoute !== '/register'">
                         <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
                     </li>
                 </ul>
@@ -22,4 +21,4 @@
         </div>
     </nav>
 </div>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
