--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
@@ -5,62 +5,79 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
           <div class="card-body p-4 p-lg-5 text-black">
-            <h2 class="h1 fw-bold mb-0">Registration Page</h2>
-            <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
+            <h2 class="h1 fw-bold mb-0">Employer Registration Page</h2>
+            <form [formGroup]="empRegisterForm" (ngSubmit)="onSubmit()" novalidate>
+
+
+
+              <!-- ROLE IN COMPANY -->
+              <!-- Drop-down can also be added  -->
               <div class="form-outline mb-2">
-                <label for="name" class="col-sm-3 col-form-label">Full Name:</label>
+                <label for="address" class="col-sm-3 col-form-label" style="font-size: small;">Your Role</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg " id="name" formControlName="name" placeholder="Full Name">
-                                    <div *ngIf="isInvalid('fullName')" class="text-danger">
-                                        {{ getErrorMessage('fullName') }}
-                                    </div>
-                                </div>
-              </div>
-              <div class="form-outline mb-2">
-                <label for="address" class="col-sm-3 col-form-label">Address:</label>
-                                <div class="col-sm-9" id="inputfield">
-                                    <input type="textarea" class="form-control form-select-lg" id="address" formControlName="address" placeholder="Address">
-                                    <div *ngIf="isInvalid('address')" class="text-danger">
-                                        {{ getErrorMessage('address') }}
-                                    </div>
-                                </div>
-              </div>
-              <div class="form-outline mb-2">
-                <label for="email" class="col-sm-3 col-form-label">Email:</label>
-                                <div class="col-sm-9" id="inputfield">
-                                    <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
-                                    <div *ngIf="isInvalid('email')" class="text-danger">
-                                        {{ getErrorMessage('email') }}
+                                    <input type="text" class="form-control form-select-lg" id="yourRole" formControlName="yourRole" placeholder="Enter Your Role">
+                                    <div *ngIf="isInvalid('yourRole')" class="text-danger">
+                                        {{ getErrorMessage('yourRole') }}
                                     </div>
                                 </div>
               </div>
 
-              <div class="form-outline mb-2">
-                <label for="phone" class="col-sm-3 col-form-label">Phone:</label>
+
+               <!-- COMPANY NAME -->
+               <div class="form-outline mb-2">
+                <label for="name" class="col-sm-3 col-form-label" style="font-size: small;">Company Name:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg" id="phone" formControlName="phone" placeholder="Phone Number">
-                                    <div *ngIf="isInvalid('phone')" class="text-danger">
-                                        {{ getErrorMessage('phone') }}
+                                    <input type="text" class="form-control form-select-lg " id="companyName" formControlName="companyName" placeholder="Enter Company Name">
+                                    <div *ngIf="isInvalid('companyName')" class="text-danger">
+                                        {{ getErrorMessage('companyName') }}
                                     </div>
                                 </div>
               </div>
+
+
+              <!-- TYPE OF COMPANY -->
               <div class="form-outline mb-2">
-                <label for="password" class="col-sm-3 col-form-label" >Password:</label>
+                <label for="email" class="col-sm-3 col-form-label" style="font-size: small;">Company Type:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="password" class="form-control form-select-lg" id="password" formControlName="password" placeholder="password">
-                                    <div *ngIf="isInvalid('password')" class="text-danger">
-                                        {{ getErrorMessage('password') }}
+                                    <input type="text" class="form-control form-select-lg" id="companyType" formControlName="companyType" placeholder="Enter Company Type">
+                                    <div *ngIf="isInvalid('companyType')" class="text-danger">
+                                        {{ getErrorMessage('companyType') }}
+                                    </div>
+                                </div>
+              </div>
+
+              <!-- COMPANY DESCRIPTION -->
+              <div class="form-outline mb-2">
+                <label for="phone" class="col-sm-3 col-form-label" style="font-size: small;">Company Description:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                  <textarea rows="5" cols="33" class="form-control form-select-lg " id="companyDesc" formControlName="companyDesc" placeholder="Enter Company Description"></textarea>
+                                    <!-- <input type="textarea" class="form-control form-select-lg" id="phone" formControlName="phone" placeholder="Phone Number"> -->
+                                    <div *ngIf="isInvalid('companyDesc')" class="text-danger">
+                                        {{ getErrorMessage('companyDesc') }}
+                                    </div>
+                                </div>
+              </div>
+
+              <!-- COMPANY ADDRESS -->
+              <div class="form-outline mb-2">
+                <label for="password" class="col-sm-3 col-form-label" style="font-size: small;">Company Address:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg" id="companyAdd" formControlName="companyAdd" placeholder="Enter Company Address">
+                                    <div *ngIf="isInvalid('companyAdd')" class="text-danger">
+                                        {{ getErrorMessage('companyAdd') }}
                                     </div>
 
                                 </div>
               </div>
+
+              <!-- COMPANY SIZE -->
               <div class="form-outline mb-2">
-                <label for="confirmpassword" class="col-sm-3 col-form-label">Confirm Password:</label>
+                <label for="confirmpassword" class="col-sm-3 col-form-label" style="font-size: small;">Company Size:</label>
                 <div class="col-sm-9" id="inputfield">
-                  <input type="password" class="form-control form-select-lg" id="confirmpassword" formControlName="confirmpassword" placeholder="Re Enter Password">
-                  <div *ngIf="registrationForm && registrationForm.get('confirmpassword')?.invalid && (registrationForm.get('confirmpassword')?.dirty || registrationForm.get('confirmpassword')?.touched)" class="text-danger">
-                    {{ getErrorMessage('confirmpassword') }}
-                  </div>
+                  <input type="number" class="form-control form-select-lg" id="companySize" formControlName="companySize" placeholder="Enter Company Size">
+                  <div *ngIf="isInvalid('companySize')" class="text-danger">
+                    {{ getErrorMessage('companySize') }}
+                </div>
 
                 </div>
               </div>
@@ -74,7 +91,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                                     </div>
                                 </div>
               </div> -->
-              <div class="form-outline mb-2">
+              <!-- <div class="form-outline mb-2">
                 <label for="nationality" class="form-label" id="inputfield">Nationality:</label>
                 <select id="nationality" formControlName="nationality" class="form-select form-select-lg" aria-placeholder="Select Nationality" required>
                   <option value=""  disabled selected>Select Nationality</option>
@@ -83,9 +100,9 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                 <div *ngIf="isInvalid('nationality')" class="text-danger">
                   {{ getErrorMessage('nationality') }}
               </div>
-              </div>
+              </div> -->
 
-              <div class="form-outline mb-2">
+              <!-- <div class="form-outline mb-2">
                 <label for="signas" class="form-label" id="inputfield">Sign As:(Role)</label>
                 <select id="signas" formControlName="signas" class="form-select form-select-lg" aria-placeholder="signas" required>
                   <option value=""  disabled selected>Select Role </option>
@@ -95,7 +112,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                 <div *ngIf="isInvalid('signas')" class="text-danger">
                   {{ getErrorMessage('signas') }}
               </div>
-              </div>
+              </div> -->
               <!-- <div class="form-outline mb-2">
                 <label for="gender" class="form-label" id="inputfield">Gender</label><br>
                 <div class="form-check form-check-inline">
@@ -112,9 +129,10 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   </div>
                 </div>
               </div> -->
-              <button type="submit" class="btn btn-primary" id="inputfield" [disabled]="!registrationForm.valid">Register</button>
+
+              <button type="submit" class="btn btn-primary" id="inputfield" [disabled]="!empRegisterForm.valid">Register</button>
               <p class="text-center mt-3">
-                Already a Member? <a routerLink="/login" style="color: #393f81;">Login</a>
+                Already a Member? <a routerLink="/emp-login" style="color: #393f81;">Login</a>
               </p>
             </form>
           </div>
